apps/podinfo-ks/podinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
spec:
  ports:
  - name: http
    port: 9898
    targetPort: http
  - name: grpc
    port: 9999
    targetPort: grpc
  selector:
    app.kubernetes.io/name: podinfo
